infrastructure/prod/kubernetes/process-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: process-service
spec:
  selector:
    app: process-service
  ports:
  - port: 80
    targetPort: 8000
