infrastructure/prod/kubernetes/upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  selector:
    app: upload-service
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
